--- a/IntegrationTool.Setup/Product.wxs
+++ b/IntegrationTool.Setup/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
      xmlns:ui="http://schemas.microsoft.com/wix/UIExtension">
-	<Product Id="*" Name="IntegrationTool 1.17.1" Language="1033" Version="1.17.1.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
+	<Product Id="*" Name="IntegrationTool 1.18.0" Language="1033" Version="1.18.0.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
 		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
 
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
@@ -61,9 +61,15 @@
       <Component Id="MainComponent_ProjectDesigner" Win64="yes">
         <File Id="MainComponent_ProjectDesigner.exe" Source="$(var.IntegrationTool.ProjectDesigner.TargetPath)" KeyPath="yes" />
       </Component>
+      <Component Id="MainComponent_ProjectDesigner_Config" Win64="yes">
+        <File Id="MainComponent_ProjectDesigner.exe.config" Source="$(var.IntegrationTool.ProjectDesigner.TargetDir)\IntegrationTool.ProjectDesigner.exe.config" KeyPath="yes" />
+      </Component>
 			 <Component Id="MainComponent_ConsoleProjectStarter" Win64="yes">
          <File Id="MainComponent_ConsoleProjectStarter.exe" Source="$(var.IntegrationTool.ConsoleProjectStarter.TargetPath)" KeyPath="yes" />
 			 </Component>
+      <Component Id="MainComponent_ConsoleProjectStarter_Config" Win64="yes">
+        <File Id="MainComponent_ConsoleProjectStarter.exe.config" Source="$(var.IntegrationTool.ConsoleProjectStarter.TargetDir)\IntegrationTool.ConsoleProjectStarter.exe.config" KeyPath="yes" />
+      </Component>
       <Component Id="MainComponent_ApplicationCore" Win64="yes">
         <File Id="MainComponent_ApplicationCore.dll" Source="$(var.IntegrationTool.ApplicationCore.TargetPath)" KeyPath="yes" />
       </Component>
@@ -100,6 +106,9 @@
       <Component Id="MainComponent_Microsoft_Xrm_Sdk" Win64="yes">
         <File Id="MainComponent_Microsoft.Xrm.Sdk.dll" Source="..\References\Microsoft.Xrm.Sdk.dll" KeyPath="yes" />
       </Component>
+      <Component Id="MainComponent_Microsoft_Xrm_Tooling_Connector" Win64="yes">
+        <File Id="MainComponent_Microsoft.Xrm.Tooling.Connector.dll" Source="..\References\Microsoft.Xrm.Tooling.Connector.dll" KeyPath="yes" />
+      </Component>      
       <Component Id="MainComponent_SQLite_Interop_dll" Win64="yes">
         <File Id="MainComponent_SQLite.Interop.dll" Source="..\References\SQLite.Interop.dll" KeyPath="yes" />
       </Component>
