--- a/IntegrationTool.Module.WriteToDynamicsCrm/UserControls/ImportSettings.xaml
+++ b/IntegrationTool.Module.WriteToDynamicsCrm/UserControls/ImportSettings.xaml
@@ -38,7 +38,9 @@
             <ComboBoxItem Content="None" Tag="None" />
             <ComboBoxItem Content="Create" Tag="Create" />
             <ComboBoxItem Content="Update" Tag="Update" />
+            <ComboBoxItem Content="Update Changed Values Only" Tag="UpdateChangedValuesOnly" />
             <ComboBoxItem Content="Create &amp; Update" Tag="All" />
+            <ComboBoxItem Content="Create &amp; Update Changed Values Only" Tag="AllChangedValuesOnly" />
         </ComboBox>
         <Label Content="If multiple exist:" Grid.Column="1" Grid.Row="3"/>
         <ComboBox x:Name="ddMultipleFoundMode" Grid.Column="2" Grid.Row="3" SelectedValue="{Binding Path=MultipleFoundMode, UpdateSourceTrigger=PropertyChanged}" SelectedValuePath="Tag" >
