--- a/IntegrationTool.Module.WriteToDynamicsCrm/UserControls/ImportSettings.xaml
+++ b/IntegrationTool.Module.WriteToDynamicsCrm/UserControls/ImportSettings.xaml
@@ -52,14 +52,18 @@
             <ComboBoxItem Content="None" Tag="None" />
             <ComboBoxItem Content="Create" Tag="Create" />
             <ComboBoxItem Content="Update" Tag="Update" />
+            <ComboBoxItem Content="Update Changed Values Only" Tag="UpdateChangedValuesOnly" />
             <ComboBoxItem Content="Create &amp; Update" Tag="All" />
+            <ComboBoxItem Content="Create &amp; Update Changed Values Only" Tag="AllChangedValuesOnly" />
         </ComboBox>
         <Label Content="Set owner on:" Grid.Column="1" Grid.Row="7"/>
         <ComboBox x:Name="ddSetOwnerMode" Grid.Column="2" Grid.Row="7" SelectedValue="{Binding SetOwnerMode}" SelectedValuePath="Tag" >
             <ComboBoxItem Content="None" Tag="None" />
             <ComboBoxItem Content="Create" Tag="Create" />
             <ComboBoxItem Content="Update" Tag="Update" />
+            <ComboBoxItem Content="Update Changed Values Only" Tag="UpdateChangedValuesOnly" />
             <ComboBoxItem Content="Create &amp; Update" Tag="All" />
+            <ComboBoxItem Content="Create &amp; Update Changed Values Only" Tag="AllChangedValuesOnly" />
         </ComboBox>
 
     </Grid>
