--- a/IntegrationTool.ProjectDesigner/MainWindow.xaml
+++ b/IntegrationTool.ProjectDesigner/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="IntegrationTool.ProjectDesigner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       xmlns:s="clr-namespace:IntegrationTool.ProjectDesigner"
         xmlns:fd="clr-namespace:IntegrationTool.ProjectDesigner.FlowDesign"
-        Title="Integration Tool" Height="600" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Integration Tool" Height="600" Width="800" WindowStartupLocation="CenterScreen" Name="UI">
+    <Window.Resources>
+        <CollectionViewSource Source="{Binding ElementName=UI, Path=RecentFilesList}" x:Key="RecentFilesItems"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="24"/>
@@ -10,15 +14,33 @@
         </Grid.RowDefinitions>
         <Menu>
             <MenuItem Header="File">
-                <MenuItem Header="New Project" Command="New" />
-                <MenuItem Header="Open Project" Command="Open" />
-                <MenuItem Header="Save Project" Command="Save" />
+                <MenuItem.ItemsSource>
+                    <CompositeCollection>
+                        <MenuItem Header="New Project" Command="New" />
+                        <MenuItem Header="Open Project" Command="Open" />
+                        <MenuItem Header="Save Project" Command="Save" />
+                        <Separator />
+                        <CollectionContainer Collection="{Binding Source={StaticResource RecentFilesItems}}" />
+
+                        <Separator />
+                        <MenuItem Header="Exit" Command="Close" />
+                    </CompositeCollection>
+                </MenuItem.ItemsSource>
+                <MenuItem.ItemContainerStyle>
+                    <Style>
+                        <Setter Property="MenuItem.Header" Value="{Binding Title}"/>
+                    </Style>
+                </MenuItem.ItemContainerStyle>
+                
+                
+                
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="View Help" x:Name="menuHelp" Click="menuHelp_Click" />
                 <MenuItem Header="About Integration Tool" x:Name="menuAbout" Click="menuAbout_Click" />
             </MenuItem>
         </Menu>
-        <ContentControl x:Name="mainWindowContent" Grid.Row="1"/>        
+        
+        <ContentControl x:Name="mainWindowContent" Grid.Row="1"/>
     </Grid>
 </Window>
