Started working on SQLite source

--- a/IntegrationTool.Setup/Product.wxs
+++ b/IntegrationTool.Setup/Product.wxs
@@ -113,7 +113,7 @@
         <File Id="MainComponent_SQLite.Interop.dll" Source="..\References\SQLite.Interop.dll" KeyPath="yes" />
       </Component>
       <Component Id="MainComponent_System_Data_SQLite" Win64="yes">
-        <File Id="MainComponent_System.Data.SQLite.dll" Source="..\References\System.Data.SQLite.dll" KeyPath="yes" />
+        <File Id="MainComponent_System.Data.SQLite.dll" Source="$(var.IntegrationTool.ProjectDesigner.TargetDir)System.Data.SQLite.dll" KeyPath="yes" />
       </Component>
       <Component Id="MainComponent_CsvHelper" Win64="yes">
         <File Id="MainComponent_CsvHelper.dll" Source="..\References\CsvHelper.dll" KeyPath="yes" />
