--- a/IntegrationTool.Module.LoadFromSQLite/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.LoadFromSQLite/ConfigurationWindow.xaml
@@ -6,6 +6,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="10*"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="10*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="26"/>
+            <RowDefinition Height="4"/>
+            <RowDefinition Height="78*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Type" Grid.Row="1"/>
+        <ComboBox x:Name="ddQueryType" Grid.Column="2" SelectedValue="{Binding Path=QueryType}" SelectedValuePath="Tag" IsEnabled="False"  Grid.Row="1" VerticalAlignment="Top" SelectionChanged="ddQueryType_SelectionChanged" >
+            <ComboBoxItem Content="Sql-Query" Tag="SqlQuery" />
+        </ComboBox>
+        <ContentControl x:Name="QueryTypeContentControl" Content="ContentControl" Grid.Row="3" Grid.ColumnSpan="5"/>
+
     </Grid>
 </UserControl>
