--- a/IntegrationTool.Module.ConnectToSharepoint/ConfigurationWindow.xaml
+++ b/IntegrationTool.Module.ConnectToSharepoint/ConfigurationWindow.xaml
@@ -21,6 +21,10 @@
         </Grid.RowDefinitions>
         <Label Content="Site Url:" Grid.Row="1"/>
         <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=SiteUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-
+        <Label Content="Authentication-Type:" Grid.Row="3"/>
+        <ComboBox x:Name="ddAuthenticationType" Grid.Column="2" SelectedValue="{Binding Path=AuthenticationType}" SelectedValuePath="Tag"  Grid.Row="3" VerticalAlignment="Top" >
+            <ComboBoxItem Content="On-Premise" Tag="OnPremise" />
+            <ComboBoxItem Content="Sharepoint Online" Tag="SharepointOnline" />
+        </ComboBox>
     </Grid>
 </UserControl>
