--- a/IntegrationTool.DataMappingControl/LoadingControl.xaml
+++ b/IntegrationTool.DataMappingControl/LoadingControl.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl x:Class="IntegrationTool.SDK.GenericControls.LoadingControl"
+﻿<UserControl x:Class="IntegrationTool.DataMappingControl.LoadingControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:IntegrationTool.DataMappingControl"
              mc:Ignorable="d" 
-             Height="60" Width="60">
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <SolidColorBrush x:Key="SpinnerColorBrush" Color="LightBlue" />
-        
+
     </UserControl.Resources>
     <Grid Name="LayoutRoot" RenderTransformOrigin="0.5,0.5">
         <Grid.Triggers>
@@ -38,7 +39,6 @@
                 <GradientStop Color="Transparent" Offset="0.959"/>
             </RadialGradientBrush>
         </Grid.OpacityMask>
-        
-    </Grid>
 
+    </Grid>
 </UserControl>
