--- a/IntegrationTool.Setup/Product.wxs
+++ b/IntegrationTool.Setup/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
      xmlns:ui="http://schemas.microsoft.com/wix/UIExtension">
-	<Product Id="*" Name="IntegrationTool 1.21.0" Language="1033" Version="1.21.0.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
+	<Product Id="*" Name="IntegrationTool 1.21.2" Language="1033" Version="1.21.2.0" Manufacturer="Peter Widmer" UpgradeCode="16487d7d-3e3d-45e0-9018-7c5382a9a339">
 		<Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
 
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
@@ -110,7 +110,7 @@
         <File Id="MainComponent_Microsoft.Xrm.Tooling.Connector.dll" Source="..\References\Microsoft.Xrm.Tooling.Connector.dll" KeyPath="yes" />
       </Component>      
       <Component Id="MainComponent_SQLite_Interop_dll" Win64="yes">
-        <File Id="MainComponent_SQLite.Interop.dll" Source="..\References\SQLite.Interop.dll" KeyPath="yes" />
+        <File Id="MainComponent_SQLite.Interop.dll" Source="$(var.IntegrationTool.ProjectDesigner.TargetDir)x64\SQLite.Interop.dll" KeyPath="yes" />
       </Component>
       <Component Id="MainComponent_System_Data_SQLite" Win64="yes">
         <File Id="MainComponent_System.Data.SQLite.dll" Source="$(var.IntegrationTool.ProjectDesigner.TargetDir)System.Data.SQLite.dll" KeyPath="yes" />
