--- a/IntegrationTool.DataMappingControl/MappingControl.xaml
+++ b/IntegrationTool.DataMappingControl/MappingControl.xaml
@@ -74,6 +74,8 @@
             </ContentControl>
         </ScrollViewer>
 
+        <Button Grid.Column="1" Grid.Row="0" Content="=" HorizontalAlignment="Center" Height="22" Margin="0,0,0,0" VerticalAlignment="Top" Width="53" Click="AutoMapp_Button_Click"/>
+
         <Rectangle Grid.Row="1" Stroke="Gray" StrokeThickness="1" Grid.ColumnSpan="3" />
         <Rectangle Grid.Row="0" Grid.RowSpan="2" Stroke="Gray" StrokeThickness="1" HorizontalAlignment="Right" />
         <Rectangle Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" Stroke="Gray" StrokeThickness="1" HorizontalAlignment="Right" />
